--- a/packages/ec-scripts-sample-project/src/styles/_base.scss
+++ b/packages/ec-scripts-sample-project/src/styles/_base.scss
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
   color: white;
-  background: tomato;
+  background: tomato url('../assets/js-logo.png') top right no-repeat;
+  background-size: 5em;
 }
